# splinter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  splinter
ansible/: ansible.cfg  inventory.ini.example
ansible/playbooks/: llm-service.yml  monitoring.yml  nuke-from-orbit.yml  service-control.yml  setup.yml
docs/: PRD.md  architecture-diagram.html  fair-use-policy.md  getting-started.md  index.md  llm-service.md  monitoring.md  perf-metrcs.md  perf-metrics.md  server-security.md  setup.md  system.md
docs/ADRs/: 000-hardware.md  001-license.md  002-naming.md  003-bare-metal.md  003-llm-service.md  004-metrics.md  005-access.md  005-infra-access.md  005-monitoring.md  006-service-access.md  007-backup.md  008-monitoring.md  009-bare-metal.md  010-fair-use.md  011-finetuning-service.md  011-litellm-switch.md  random-notes.md
docs/examples/: example-calls.ipynb
docs/gotchas/: gotcha-001.md  gotcha-002.md  gotcha-003.md  gotcha-004.md  gotcha-005.md  gotcha-006.md
docs/stacks/: llm-service.md  monitoring.md
docs/stylesheets/: extra.css
docs/templates/: adr-template.md  gotcha.md
scripts/: llm-service.sh  monitoring.sh  setup.sh  splinter_motd_dynamic.sh  sweep.sh
stacks/finetuning-service/: .env.example  Dockerfile  Dockerfile.api  Dockerfile.worker  config.yaml  docker-compose.yml  requirements.api.txt  requirements.worker.txt  whitelist.txt  whitelist.txt.example  worker.py
stacks/llm-service/: .env.example  (+5 more)
stacks/monitoring/fail2ban-geo-exporter/: Dockerfile  exporter.py  pyproject.toml
(+23 files in other folders)
