[project]
name = "splinter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "numpy>=1.26",
    "openai>=2.21.0",
    "rich>=14.3.2",
    "vllm>=0.15.1",
]
